[package]
name = "replicant_toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
eframe = { version = "0.31.1", features = ["wayland"] }
egui-notify = "0.19.0"
egui-phosphor = "0.9.0"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = { version = "0.25.5" }
image_dds = "0.7.2"
rfd = "0.15.3"
zstd = "0.13.3"
